p2/shared_folder/app-three.yaml
# hello-kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app-three
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: paulbouwer/hello-kubernetes:1.9
        ports:
        - containerPort: 8080
