p2/shared_folder/app-two.yaml
# hello-kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app-two
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two
        image: paulbouwer/hello-kubernetes:1.9
        ports:
        - containerPort: 8080
